--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-AWS_ACCESS_KEY_ID = ACCESS_KEY_GOES_HERE
-AWS_SECRET_ACCESS_KEY = SECRET_ACCESS_KEY_GOES_HERE
-AWS_REGION = REGION_GOES_HERE
-AWS_BUCKET_NAME = BUCKET_NAME_GOES_HERE
+AWS_ACCESS_KEY_ID = 
+AWS_SECRET_ACCESS_KEY = 
+AWS_REGION = 
+AWS_BUCKET_NAME = 
